syntax = "proto3";

package messagepb;

option go_package = "github.com/Vovarama1992/go-ai-messenger/proto/messagepb;messagepb";

message GetMessagesRequest {
  int64 chat_id = 1;
}

message ChatMessage {
  int64 senderId = 1;
  string text = 2;
  int64 sentAt = 3;
  string senderEmail = 4; // ← вот это добавляем
}

message GetMessagesResponse {
  repeated ChatMessage messages = 1;
}

service MessageService {
  rpc GetMessagesByChat(GetMessagesRequest) returns (GetMessagesResponse);
}